[package]
name = "sudokux-minlex"
version = "0.1.0"
edition = "2021"
authors = ["David Clamage <rangsk@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudokux_minlex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.2"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
